--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   "scripts": {
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "test": "mocha tests --recursive"
+    "test": "mocha tests --recursive",
+    "test:cli": "mocha"
   },
   "dependencies": {
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.1",
-    "eslint-plugin-eslint-plugin": "^4.0.1",
+    "@babel/eslint-parser": "^7.16.5",
+    "eslint": "^8.7.0",
+    "eslint-plugin-eslint-plugin": "^4.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "mocha": "^9.1.3",
+    "mocha": "^9.2.0",
     "@types/eslint": "^8.4.1"
   },
   "engines": {
-    "node": "12.x || 14.x || >= 16"
+    "node": "14.x || >= 16"
   },
   "peerDependencies": {
     "eslint": ">=6"
