--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "test": "mocha tests --recursive",
-    "test:cli": "mocha"
+    "test:cli": "mocha",
+    "prepare": "husky install",
+    "commit": "commit"
   },
   "dependencies": {
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/prompt-cli": "^16.2.1",
+    "@types/eslint": "^8.4.1",
     "eslint": "^8.7.0",
     "eslint-plugin-eslint-plugin": "^4.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "mocha": "^9.2.0",
-    "@types/eslint": "^8.4.1"
+    "husky": "^7.0.0",
+    "mocha": "^9.2.0"
   },
   "engines": {
     "node": "14.x || >= 16"
