--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
+    "@types/eslint": "^8.4.1",
     "eslint": "^8.7.0",
+    "eslint-docgen": "^0.7.0",
     "eslint-plugin-eslint-plugin": "^4.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "mocha": "^9.2.0",
-    "@types/eslint": "^8.4.1"
+    "mocha": "^9.2.0"
   },
   "engines": {
     "node": "14.x || >= 16"
